My account functionality implemented. Edit my account implemented (fist name, last name, email). Actions created. Texts updated.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -110,6 +110,7 @@ general.creationDate = Creation date
 general.modificationDate = Modification date
 general.description = Description
 general.cancel = Cancel
+general.edit = Edit
 
 moderator.name = Username
 moderator.email = Email
@@ -246,7 +247,6 @@ manageChannelModerators.channelNotFound = The specified channel could not be fou
   reload the channel resources and try again.
 manageChannelModerators.channelDataIncomplete = Please provide a name for the moderator that should be added.
 
-
 general.faculty.computerScienceAndEngineering = Faculty of Engineering, Computer Science and Psychology
 general.faculty.mathematicsAndEconomics = Faculty of Mathematics and Economics
 general.faculty.medicines = Faculty of Medicine
@@ -276,3 +276,15 @@ group.type.working = Working group
 group.admin = Group administrator
 group.notfound = Sorry, but we couldn't find that group resource.
 
+myAccount.title = My account
+myAccount.info = This page shows your account data. You may delete your account or change your account data by \
+  clicking the respective button.
+myAccount.warning.delete = A deleted account cannot be restored!
+myAccount.nodata = No account data found
+myAccount.nodata.info = Your account data couldn't be found in the system.
+myAccount.delete.success = Your account has been deleted.
+myAccount.edit.success = Your account has been edited.
+myAccount.edit.notEdited = No changes detected. Your account has not been edited.
+
+myAccountEdit.title = Edit account
+myAccountEdit.info = Update your account data here and submit the changes by clicking the edit button.
