Continued to implement edit channel functionality. Added EditChannelAction and implemented it. Implementation is nearly done. Validation of subclass data fields is still missing. Added updateChannel functionality to ChannelAPI.  Handled error case in LoadChannelDetailsAction. Switched to UTF-8 encoding in requestcontextmanager due to encoding problems (string comparisons failed due to encoding problems). Changed a lot of view related stuff in channelDetails.jsp. Added entries to request dispatcher and action factory.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -94,12 +94,15 @@ general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
 general.message.error.channelNotFound = The channel could not be found. Please reload the channel resources. It is \
   possible that the channel resource has been deleted.
+general.message.error.channelDataIncomplete = There is missing data that is mandatory for the operation on the \
+  channel. Please check your input.
 general.message.error.moderatorNotFound = The specified moderator resource could not be found.
 general.message.error.databaseFailure = Something went wrong while accessing the database on the server. Please try \
   again. If the error remains, contact an administrator.
 general.alert.success = Success!
 general.alert.success.info = Operation performed successfully.
 general.alert.failure = Failure!
+general.alert.warning = Warning!
 general.confirmation.title = Are you sure?
 general.yes = Yes
 general.no = No
@@ -210,6 +213,24 @@ announcements.createAnnouncement.error.textInvalid = Request was rejected by the
 channelDetails.title = Channel details
 channelDetails.info = You can modify the data of the channel. Please make sure to provide all mandatory data.
 channelDetails.submitButton.label = Save changes
+channelDetails.noChannelData.warning = It seems that no channel data could be loaded. Please try again.
+channelDetails.noUpdate.warning = There is no changed data. No update necessary.
+
+channel.form.validationError.missingName = Please enter a channel name.
+channel.form.validationError.missingTerm = Please enter a valid term.
+channel.form.validationError.missingContacts = Please provide contact information.
+channel.form.validationError.invalidName = The provided name is invalid. Please make sure the name contains at least \
+  3 characters and does not exceed a maximum of 45 characters. There are also special characters that are forbidden \
+  in the channel name.
+channel.form.validationError.invalidTerm = The provided term does not fulfill the required format.
+channel.form.validationError.invalidContacts = The provided contacts information exceeds the maximum length of 120 \
+  characters.
+channel.form.validationError.invalidDescription = The provided description exceeds the maximum length of 500 characters.
+channel.form.validationError.invalidLocations = The provided location information exceeds the maximum length of 120 \
+  characters.
+channel.form.validationError.invalidDates = The provided dates information exceeds the maximum length of 150 characters.
+channel.form.validationError.invalidWebsite = The provided website information exceeds the maximum length of 500 \
+  characters.
 
 manageChannelModerators.title = Manage moderators
 manageChannelModerators.info = This page enables you to manage the responsible moderators of a certain channel. \
