Added validation of subclass data fields in edit channel action.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -223,14 +223,29 @@ channel.form.validationError.invalidName = The provided name is invalid. Please 
   3 characters and does not exceed a maximum of 45 characters. There are also special characters that are forbidden \
   in the channel name.
 channel.form.validationError.invalidTerm = The provided term does not fulfill the required format.
-channel.form.validationError.invalidContacts = The provided contacts information exceeds the maximum length of 120 \
-  characters.
+channel.form.validationError.invalidContacts = The provided information about the contact possibilities exceeds the \
+  maximum length of 120 characters.
 channel.form.validationError.invalidDescription = The provided description exceeds the maximum length of 500 characters.
-channel.form.validationError.invalidLocations = The provided location information exceeds the maximum length of 120 \
+channel.form.validationError.invalidLocations = The provided information about the locations exceeds the maximum \
+  length of 120 characters.
+channel.form.validationError.invalidDates = The provided information about the dates exceeds the maximum length of 150 \
   characters.
-channel.form.validationError.invalidDates = The provided dates information exceeds the maximum length of 150 characters.
-channel.form.validationError.invalidWebsite = The provided website information exceeds the maximum length of 500 \
+channel.form.validationError.invalidWebsite = The provided information about the website exceeds the maximum length \
+  of 500 characters.
+channel.form.validationError.invalidLecturer = The provided information about the lecturer exceeds the maximum length \
+  of 120 characters.
+channel.form.validationError.invalidAssistant = The provided information about the assistants exceeds the maximum \
+  length of 120 characters.
+channel.form.validationError.invalidStartDate = The provided information about the start date exceeds the maximum \
+  length of 45 characters.
+channel.form.validationError.invalidEndDate = The provided information about the end date exceeds the maximum length \
+  of 45 characters.
+channel.form.validationError.invalidCost = The provided information about the cost exceeds the maximum length of 150 \
   characters.
+channel.form.validationError.invalidOrganizer = The provided information about the organizer exceeds the maximum \
+  length of 120 characters.
+channel.form.validationError.invalidNrOfParticipants = The provided information about the number of \
+  participants exceeds the maximum length of 150 characters.
 
 manageChannelModerators.title = Manage moderators
 manageChannelModerators.info = This page enables you to manage the responsible moderators of a certain channel. \
