Modified previous EditChannelAction so that it supports edit and creation process of channels. Implemented the create channel functionality. Added createChannel method in ChannelAPI. Added LoadCreateChannelDialogAction. Added view createChannel.jsp. Added the "create channel" button, etc. in myChannels.jsp. Added some missing labels and performed minor changes on channelDetails.jsp. Adjusted the mappings in RequestDispatcher, ActionFactory and Constants.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -160,6 +160,7 @@ myChannels.nodata = No channels found
 myChannels.nodata.info = You are not responsible for any channels.
 myChannel.panel.channelName = Channel name
 myChannel.panel.channelType = Channel type
+myChannel.panel.term.year = Year
 myChannel.panel.locations = Locations
 myChannel.panel.dates = Dates
 myChannel.panel.contactInformation = Contact
@@ -178,6 +179,8 @@ myChannels.button.alterChannelModerators = Manage moderators
 myChannels.button.deleteChannel = Delete channel
 myChannels.button.announcements = Announcements
 myChannels.warning.delete = Do you really want to delete the channel {0}? This cannot be undone.
+myChannels.createChannel.description = Do you want to create a new channel?
+myChannels.button.createChannel = Create channel
 
 announcements.title = Announcements of channel
 announcements.info = The page lists all the announcements of the channel. New messages can be sent to the subscribers.
@@ -246,6 +249,15 @@ channel.form.validationError.invalidOrganizer = The provided information about t
   length of 120 characters.
 channel.form.validationError.invalidNrOfParticipants = The provided information about the number of \
   participants exceeds the maximum length of 150 characters.
+channel.form.validationError.channelNameAlreadyExists = The channel name already exists in the system. A channel's \
+  name should be unique in the whole system in order to clearly identify a channel. Please choose another channel name.
+channel.form.validationError.generalValidationError = The request was rejected by the server. Please check your input.
+
+createChannel.title = Create channel
+createChannel.info = This page enables you to create a new channel. Please provide all mandatory data for the creation.
+createChannel.submitButton.label = Create channel
+createChannel.creation.loadingFailed = Something went wrong in the loading process of the creation dialog. Please try\
+            again.
 
 manageChannelModerators.title = Manage moderators
 manageChannelModerators.info = This page enables you to manage the responsible moderators of a certain channel. \
