Added functionality to display all channels as an administrator. Implemented methods for getAllChannels in ChannelAPI. Renamed the action MyChannelsAction to DeleteChannelAction. This name is better since it realizes just the delete functionality. Added action LoadAllChannelsAction and implemented it. Added view channels.jsp. Updated constants, action factory, and request dispatcher.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -259,6 +259,16 @@ createChannel.submitButton.label = Create channel
 createChannel.creation.loadingFailed = Something went wrong in the loading process of the creation dialog. Please try\
             again.
 
+allChannels.title = Channels
+allChannels.info = This page lists all channels that exist in the system. It enables to check the channels and its \
+  data. If channels violate any restrictions, they can be removed.
+allChannels.list.heading = All channels
+allChannels.none = There are no channels in the system.
+allChannels.nodata = No channels.
+allChannels.nodata.info = No channel selected.
+allChannels.button.deleteChannel = Delete channel
+allChannels.warning.delete = Do you really want to delete the channel {0}? This cannot be undone.
+
 manageChannelModerators.title = Manage moderators
 manageChannelModerators.info = This page enables you to manage the responsible moderators of a certain channel. \
   Moderators can be added or removed from the set of responsible moderators.
