Helper action and welcome.jsp created to redirect to index page if root is requested. Added 8080 port so REST server url. Current version is configured for deployment on the server.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,6 +5,6 @@
          version="3.1">
 
     <welcome-file-list>
-        <welcome-file>webclient/index</welcome-file>
+        <welcome-file>webclient/welcome</welcome-file>
     </welcome-file-list>
 </web-app>
