Load and display reminder details for a specific channel implemented.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -178,6 +178,7 @@ myChannels.button.alterChannelData = Edit channel data
 myChannels.button.alterChannelModerators = Manage moderators
 myChannels.button.deleteChannel = Delete channel
 myChannels.button.announcements = Announcements
+myChannels.button.reminders = Reminders
 myChannels.warning.delete = Do you really want to delete the channel {0}? This cannot be undone.
 myChannels.createChannel.description = Do you want to create a new channel?
 myChannels.button.createChannel = Create channel
@@ -321,7 +322,7 @@ general.term.winter = Winter
 
 groups.title = Groups
 groups.info = This page lists all the groups of the system. They are sorted in descending order by group name. You can \
-  check the group info. You are also able to delete a group if there is a sufficient reason.
+  check the group information. You are also able to delete a group if there is a sufficient reason.
 groups.warning.delete = Deleted groups cannot be restored!
 groups.list.heading = Groups
 groups.nodata = No groups found
@@ -366,3 +367,29 @@ myAccountEdit.password.dialog.newAgain.validation.mismatch = The new password en
 myAccountEdit.password.dialog.unauthorized = You entered an invalid password as your current password.
 myAccountEdit.password.change.submit = Change
 myAccountEdit.password.successful = Your password has been changed successfully.
+
+reminders.title = Reminders
+reminders.info = This page lists all reminders of the selected channel. You can check and edit the reminder \
+  information. You are also able to create a new reminder or delete existing reminders.
+reminders.warning.delete = Deleted reminders cannot be restored!
+reminders.list.heading = Reminders
+reminders.nodata = No reminders found
+reminders.nodata.info = There are no reminders for this channel.
+reminders.delete.success = The reminder {0} has been deleted.
+
+reminder.title = Title
+reminder.text = Text
+reminder.startDate = Start date
+reminder.endDate = End date
+reminder.nextDate = Next reminder date
+reminder.expired = The reminder is expired.
+reminder.priority = Priority
+reminder.priority.high = High
+reminder.priority.normal = Normal
+reminder.interval = Interval
+reminder.interval.daily = Send reminder every day.
+reminder.interval.xDays = Send reminder every {0} days.
+reminder.interval.weekly = Send reminder every week.
+reminder.interval.xWeeks = Send reminder every {0} weeks.
+reminder.interval.once = Send reminder only once.
+reminder.interval.invalid = The reminder interval is invalid.
