Delete reminder implemented.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -327,7 +327,7 @@ groups.warning.delete = Deleted groups cannot be restored!
 groups.list.heading = Groups
 groups.nodata = No groups found
 groups.nodata.info = There are no groups in the system.
-groups.delete.success = The group {0} has been deleted.
+groups.delete.success = The group "{0}" has been deleted.
 
 group.type = Group type
 group.type.tutorial = Tutorial group
@@ -375,7 +375,7 @@ reminders.warning.delete = Deleted reminders cannot be restored!
 reminders.list.heading = Reminders
 reminders.nodata = No reminders found
 reminders.nodata.info = There are no reminders for this channel.
-reminders.delete.success = The reminder {0} has been deleted.
+reminders.delete.success = The reminder "{0}" has been deleted.
 
 reminder.title = Title
 reminder.text = Text
@@ -393,3 +393,4 @@ reminder.interval.weekly = Send reminder every week.
 reminder.interval.xWeeks = Send reminder every {0} weeks.
 reminder.interval.once = Send reminder only once.
 reminder.interval.invalid = The reminder interval is invalid.
+reminder.notfound = Sorry, but we couldn't find that reminder resource.
