Changed panel width in announcements to full width. Removed spaces in textarea for message text. Changed button labels for Edit and Delete in myChannels.jsp

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -174,9 +174,9 @@ myChannel.panel.event.cost = Cost
 myChannel.panel.event.organizer = Organizer
 myChannel.panel.sports.cost = Cost
 myChannel.panel.sports.numberOfParticipants = Number of participants
-myChannels.button.alterChannelData = Edit channel data
+myChannels.button.alterChannelData = Edit
 myChannels.button.alterChannelModerators = Manage moderators
-myChannels.button.deleteChannel = Delete channel
+myChannels.button.deleteChannel = Delete
 myChannels.button.announcements = Announcements
 myChannels.button.reminders = Reminders
 myChannels.warning.delete = Do you really want to delete the channel {0}? This cannot be undone.
