Button fixes for pages channels, myAccount, myChannels. Create reminder button added to reminders page.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -376,6 +376,8 @@ reminders.list.heading = Reminders
 reminders.nodata = No reminders found
 reminders.nodata.info = There are no reminders for this channel.
 reminders.delete.success = The reminder "{0}" has been deleted.
+reminders.create.text = Do you want to create a new reminder?
+reminders.create.button = Create reminder
 
 reminder.title = Title
 reminder.text = Text
