Adjusted page layouts. Adjusted form layout in channelDetails. Adjusted buttons. The same was done in createChannels.jsp Small changes in managechannelModerators: Changed button positions. Adjusted layout of passwordReset and register in order to be consistent with the other pages.
Added check for empty input in ResetPasswordAction.
Added handling of EmailFailure in RegisterAction.
Set lecture as a mandatory field and added the validation rule in CreateOrEditChannelAction.

Added some string resources.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -38,6 +38,7 @@ resetPassword.description = If you have forgotten your password, you can reset i
   should change this password as soon as possible.
 resetPassword.resetButton.label = Reset password
 resetPassword.failure.accountNotFound = There is no account associated with this username.
+resetPassword.failure.noAccountName = Please provide the username of the account.
 resetPassword.form.label.name.desc = Enter username
 resetPassword.info.success = Password reset executed successfully. Your new password was sent to you via email.
 resetPassword.info.failure = Failed to reset password.
@@ -83,6 +84,8 @@ register.form.validationError.missingMotivation = Please provide your motivation
 register.form.validationError.general.rejected = Rejected by the server. Please check your input again.
 register.info.connectionFailure = The creation of the account failed. The connection to the server could not be \
   established. The server might be offline at the moment. Please try again later.
+register.info.emailFailure = The account request was received and is stored successfully. However, the server could \
+  not send a confirmation email. Please check whether your email address is correct.
 
 general.message.error.connectionFailure = The request has failed due to a connection failure. The server seems to be \
   unavailable. Please try again later.
@@ -215,7 +218,9 @@ announcements.createAnnouncement.error.textInvalid = Request was rejected by the
   text.
 
 channelDetails.title = Channel details
-channelDetails.info = You can modify the data of the channel. Please make sure to provide all mandatory data.
+channelDetails.info = You can modify the data of the channel. Please make sure to provide all mandatory data. \
+  Mandatory data fields are marked with a * character. It is not possible to change the type of the channel. If you \
+  want a channel of a different type, you need to create a new channel.
 channelDetails.submitButton.label = Save changes
 channelDetails.noChannelData.warning = It seems that no channel data could be loaded. Please try again.
 channelDetails.noUpdate.warning = There is no changed data. No update necessary.
@@ -238,6 +243,7 @@ channel.form.validationError.invalidWebsite = The provided information about the
   of 500 characters.
 channel.form.validationError.invalidLecturer = The provided information about the lecturer exceeds the maximum length \
   of 120 characters.
+channel.form.validationError.missingLecturer = Please provide information about the lecturer of this lecture.
 channel.form.validationError.invalidAssistant = The provided information about the assistants exceeds the maximum \
   length of 120 characters.
 channel.form.validationError.invalidStartDate = The provided information about the start date exceeds the maximum \
@@ -255,7 +261,9 @@ channel.form.validationError.channelNameAlreadyExists = The channel name already
 channel.form.validationError.generalValidationError = The request was rejected by the server. Please check your input.
 
 createChannel.title = Create channel
-createChannel.info = This page enables you to create a new channel. Please provide all mandatory data for the creation.
+createChannel.info = This page enables you to create a new channel. Please provide all mandatory data for the \
+  creation. You can choose between different channel types. Each channel type can have further data fields. The data \
+  fields that are marked with a * are mandatory.
 createChannel.submitButton.label = Create channel
 createChannel.creation.loadingFailed = Something went wrong in the loading process of the creation dialog. Please try\
             again.
