Edit reminder button added. Index page updated. Login page updated.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -12,11 +12,30 @@ header.nav.label.myAccount = My account
 
 index.welcome = Welcome to the University News Ulm Web Client!
 index.text.app = The University News Ulm App is available for Android and Windows Phone.
-index.text.app.android = Get the App for Android from the Google Play Store.
+index.text.app.android = Get the App for Android from the Google Play Store. The app will be available soon.
 index.button.app.android = Get Android App
-index.text.app.windowsPhone = Get the App for Windows Phone from the Windows Store.
+index.text.app.windowsPhone = Get the App for Windows Phone from the Windows Store. The app will be available soon.
 index.button.app.windowsPhone = Get Windows Phone App
 index.text.loggedIn = You are logged in as:
+index.about.title = What is University News Ulm?
+index.about.text1 = University News Ulm (UNU) has been created in 2016 in the focus project Advanced Mobile \
+  Application Engineering at the Institute of Databases and Information Systems at the University of Ulm.
+index.about.text2 = Die Grundaufgabe von UNU ist es, Informationen zu einem bestimmten Thema zu verbreiten. Dazu \
+  sollen unterschiedliche Kanäle, die über unterschiedliche Themen benachrichtigen, abonniert werden können. \
+  Ein solcher Kanal kann zum Beispiel über Neuigkeiten wie eine Raumänderung einer Vorlesung benachrichtigen oder an \
+  Bevorstehendes wie den VVK einer Uniparty erinnern.
+index.about.text3 = Der Web Client dient der Administration und Verwaltung von Kanälen. Die Moderatoren eines Kanals \
+  können so z. B. neue Kanalnachrichten erstellen. Mit Hilfe der Apps können die Endnutzern (Studenten) Kanäle \
+  abonnieren und Nachrichten empfangen. Moderatoren haben die Möglichkeit Kanäle auch mit Hilfe der App zu verwalten.
+index.about.text4 = Des Weiteren ermöglichen die Apps die Erstellung von verschiedenen Gruppen. Grundfunktion einer \
+  Gruppe ist es, einen in sich geschlossenen Bereich zu schaffen, in dem sich die Mitglieder dieser Gruppe \
+  austauschen und organisieren können. Innerhalb von Gruppen soll es möglich sein zu chatten, Konversationen über \
+  bestimmten Themen zu erstellen und Abstimmungen durchzuführen.
+index.about.text5 = The UNU system consists of this Web Client, an associated REST Server and Apps for Android and \
+  Windows Phone. All these components were developed by Matthias Mak and Philipp Speidel. Manager of the \
+  project is Marc Schickler.
+index.about.text6 = This software is provided without any specific or implied warranties. For questions or \
+  suggestions, please contact
 
 login.label.heading = Please sign in
 login.label.username = Username
