Continued to implement reminder functionality.
Added required libraries for date picker and time picker. This includes jquery-mousewheel, globalize, jquery-ui and some images for the widgets.

Added createReminder and getReminder methods to ChannelAPI.
Added UTF-8 encoding to OutputStreams in ChannelAPI and ModeratorAPI.

Added three actions and implemented them: CreateOrEditReminderAction, LoadCreateReminderDialogAction, LoadEditReminderAction.
In CreateOrEditReminderAction is the implementation of the editing process still missing.

Minor changes in CreateOrEditChannelAction and LoadRemindersAction.

Updated mappings in RequestDispatcher and ActionFactory to support the new functionality.

Added some constants.

Minor changes in FrontController.

announcements.jsp, createChannel.jsp, myChannels.jsp: Minor changes (close tag, formatting, ...)

Added references to new libraries in header.jsp.

Created createReminder.jsp and editReminder.jsp

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -53,7 +53,7 @@ login.passwordReset.description.link = Reset password
 resetPassword.heading = Reset password
 resetPassword.description = If you have forgotten your password, you can reset it here. Please provide the username \
   which is assigned to your account. The system will respond by sending an email to the address that is associated \
-  with your account. The email contains a new password which enables your to perform the login process. However, you \
+  with your account. The email contains a new password which enables you to perform the login process. However, you \
   should change this password as soon as possible.
 resetPassword.resetButton.label = Reset password
 resetPassword.failure.accountNotFound = There is no account associated with this username.
@@ -116,6 +116,8 @@ general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
 general.message.error.channelNotFound = The channel could not be found. Please reload the channel resources. It is \
   possible that the channel resource has been deleted.
+general.message.error.reminderNotFound = The reminder could not be found. Please reload the reminder resources. It is\
+   possible that the reminder resource has been deleted.
 general.message.error.channelDataIncomplete = There is missing data that is mandatory for the operation on the \
   channel. Please check your input.
 general.message.error.moderatorNotFound = The specified moderator resource could not be found.
@@ -146,8 +148,8 @@ moderator.firstname = First name
 moderator.notfound = Sorry, but we couldn't find that moderator resource.
 
 application.title = Account applications
-application.info = This page lists all pending account applications. They are sorted in descending order by last name. \
-  Please review the applications. Then accept or decline the applications.
+application.info = This page lists all pending account applications. They are sorted in descending order depending on \
+   the last name. Please review the applications. Then accept or decline the applications.
 application.list.heading = Applicants
 application.accept = Accept
 application.decline = Decline
@@ -155,12 +157,12 @@ application.nodata = No applications found
 application.nodata.info = There are no pending account applications.
 application.accept.success = The account application of {0} has been accepted.
 application.decline.success = The account application of {0} has been declined.
-application.warning.decline = If you decline the application it will be deleted. It cannot be restored!
+application.warning.decline = If you decline the application, it will be deleted. It cannot be restored!
 
 accounts.title = System accounts
-accounts.info = This page lists all moderator accounts of the system. They are sorted in descending order by last \
-  name. You may lock or delete a moderator account by clicking the respective button. Deleted accounts cannot be \
-  restored.
+accounts.info = This page lists all moderator accounts of the system. They are sorted in descending order depending \
+  on the last name. You may lock or delete a moderator account by clicking the respective button. Deleted accounts \
+  cannot be restored.
 accounts.warning.delete = Deleted accounts cannot be restored!
 accounts.list.heading = Accounts
 accounts.lock = Lock
@@ -180,7 +182,7 @@ myChannels.list.heading = Channels
 myChannels.none = None
 myChannels.nodata = No channels found
 myChannels.nodata.info = You are not responsible for any channels.
-myChannel.panel.channelName = Channel name
+myChannel.panel.channelName = Name
 myChannel.panel.channelType = Channel type
 myChannel.panel.term.year = Year
 myChannel.panel.locations = Locations
@@ -348,8 +350,8 @@ general.term.summer = Summer
 general.term.winter = Winter
 
 groups.title = Groups
-groups.info = This page lists all the groups of the system. They are sorted in descending order by group name. You can \
-  check the group information. You are also able to delete a group if there is a sufficient reason.
+groups.info = This page lists all the groups of the system. They are sorted in descending order depending on the group \
+  name. You can check the group information. You are also able to delete a group if there is a sufficient reason.
 groups.warning.delete = Deleted groups cannot be restored!
 groups.list.heading = Groups
 groups.nodata = No groups found
@@ -423,3 +425,45 @@ reminder.interval.xWeeks = Send reminder every {0} weeks.
 reminder.interval.once = Send reminder only once.
 reminder.interval.invalid = The reminder interval is invalid.
 reminder.notfound = Sorry, but we couldn't find that reminder resource.
+
+createReminder.title = Create reminder
+createReminder.info = A reminder sends announcements in a specified interval. Here you can create a new reminder. \
+  Please provide the necessary data. All fields are mandatory. There are different kinds of reminders. There are \
+  reminders that send an announcement only once at a specific time and date. Furthermore, other reminder types can be\
+   configured to send announcements in a weekly or daily interval. You can specify the time and date when the \
+  reminder should start and when it should stop.
+reminder.general.panel.startDate = Start date
+reminder.general.panel.endDate = End date
+reminder.general.panel.time = Time
+reminder.general.panel.interval.desc = Please specify the interval in which announcements will be sent.
+reminder.general.panel.intervaltype = Interval type
+reminder.general.panel.intervaltype.daily = Daily
+reminder.general.panel.intervaltype.weekly = Weekly
+reminder.general.panel.intervaltype.oneTime = One-Time
+reminder.general.panel.interval.labelDaily = In days
+reminder.general.panel.interval.labelWeekly = In weeks
+reminder.general.panel.interval.labelOneTime = No repetition
+reminder.general.panel.message.desc = Please specify the announcement that will be sent by the reminder.
+createReminder.submitButton.label = Create reminder
+
+reminder.validation.error.dateNotSet = One of the specified date values is not set or does not match the expected \
+  format. Please check your input.
+reminder.validation.error.titleNotSet = The title of the announcement is not set. Please provide a title.
+reminder.validation.error.textNotSet = The text of the announcement is not set. Please provide a text.
+reminder.validation.error.titleTooLong = The provided title exceeds the maximum length of 45 characters.
+reminder.validation.error.textTooLong = The provided text exceeds the maximum length of 500 characters.
+reminder.validation.error.startDateAfterEndDate = The provided start date is after the provided end date.
+reminder.validation.error.endDateNotInFuture = The provided end date is in the past.
+reminder.validation.error.needsToBeOneTime = Start and end date are equal. It needs to be an one-time reminder.
+reminder.validation.error.intervalInvalidFormat = An invalid interval format has been provided. Please contact an \
+  administrator.
+reminder.validation.error.intervalOutOfRange = The specified interval is outside the valid interval range. Please \
+  contact an administrator.
+reminder.validation.error.generalError = The server has rejected the request. Please check your input. If the action \
+  remains unusable, contact an administrator.
+
+editReminder.title = Edit reminder
+editReminder.info = It is possible to change the configuration of a reminder. You can see the current configuration \
+  represented in the corresponding data fields. You can change individual fields as desired. However, make sure to \
+  provide all the required data for the editing process.
+editReminder.submitButton.label = Save changes
