Added edit reminder functionality.
Added updateReminder method in ChannelAPI.
Added corresponding edit methods to CreteOrEditReminderAction. Added support for ignore flag in LoadRemindersAction.
Updated RequestDispatcher and ActionFactory methods.
Changed type of active field in reminder from boolean to Boolean.
Added ignore field in reminders.jsp and no update warning in editReminder.jsp

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -425,6 +425,10 @@ reminder.interval.xWeeks = Send reminder every {0} weeks.
 reminder.interval.once = Send reminder only once.
 reminder.interval.invalid = The reminder interval is invalid.
 reminder.notfound = Sorry, but we couldn't find that reminder resource.
+reminder.skipNextEventFlag = Skip next reminder event
+reminder.skipNextEventFlag.yes = The next reminder event will be skipped. The next reminder date property has been \
+  updated.
+reminder.skipNextEventFlag.no = The flag is currently not set.
 
 createReminder.title = Create reminder
 createReminder.info = A reminder sends announcements in a specified interval. Here you can create a new reminder. \
@@ -467,3 +471,4 @@ editReminder.info = It is possible to change the configuration of a reminder. Yo
   represented in the corresponding data fields. You can change individual fields as desired. However, make sure to \
   provide all the required data for the editing process.
 editReminder.submitButton.label = Save changes
+editReminder.noUpdate.warning = The data of the reminder has not changed. No update will be performed.
