Continued to implement reminder related functionality.
Added two methods to ChannelAPI: changeActiveStatusOfReminder and changeIgnoreFlagOfReminder.
Removed the ignore flag related functionality from the CreateOrEditReminderAction and placed it seperately in RemindersAction.
Added functionality for activating/deactivating reminder and set/reset of ignore flag in RemindersAction.
Added modal dialogs and buttons for this kind of functionality to the reminders.jsp view. Added icons to represent the status of a reminder.

Changed icons in manageChannelModerators.jsp.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -407,6 +407,19 @@ reminders.nodata.info = There are no reminders for this channel.
 reminders.delete.success = The reminder "{0}" has been deleted.
 reminders.create.text = Do you want to create a new reminder?
 reminders.create.button = Create reminder
+reminders.warning.deactivation = Do you really want to deactivate the reminder "{0}"? The reminder will stop sending \
+  announcements.
+reminders.warning.activation = Do you want to reactivate the reminder "{0}"? The reminder will continue to send \
+  announcements in the specified interval.
+reminders.button.activate = Activate
+reminders.button.deactivate = Deactivate
+reminders.activation.success = The reminder is now active again.
+reminders.deactivation.success = The reminder is now deactivated.
+reminders.warning.skipNextEvent.set = Do you want to skip the next event of the reminder "{0}"? If this flag is set, \
+  the next event will be skipped, i.e. no announcement will be sent. The flag will be reset automatically afterwards.
+reminders.warning.skipNextEvent.reset = Do you want to reset the flag manually for the reminder "{0}"?
+reminders.button.resetIgnoreFlag = Reset skip event flag
+reminders.button.setIgnoreFlag = Set skip event flag
 
 reminder.title = Title
 reminder.text = Text
@@ -429,6 +442,8 @@ reminder.skipNextEventFlag = Skip next reminder event
 reminder.skipNextEventFlag.yes = The next reminder event will be skipped. The next reminder date property has been \
   updated.
 reminder.skipNextEventFlag.no = The flag is currently not set.
+reminder.deactivated = The reminder is deactivated. It won't send announcements.
+reminder.expired.short = (expired)
 
 createReminder.title = Create reminder
 createReminder.info = A reminder sends announcements in a specified interval. Here you can create a new reminder. \
